Revert ": add missing file"  - Sorry commited by mistake.  - wrong git repository.  - Sry for the inconvenience. This reverts commit 84554f7073fd117816d5e4dfd63d6ba4fb401ab2.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Testimonials from "@components/content/Testimonials.astro";
   <SectionMuted>
     <Container>
       <div
-        class="grid md:grid-cols-3 ltablet:griddfgdgfdfgfdgdf-cols-3 lg:grid-cols-3 gap-x-6 gap-y-12 items-center justify-center -mt-28 md:-mt-44 mb-14"
+        class="grid md:grid-cols-3 ltablet:grid-cols-3 lg:grid-cols-3 gap-x-6 gap-y-12 items-center justify-center -mt-28 md:-mt-44 mb-14"
         x-intersect="activeStep = ''"
       >
         <!-- Item -->
